--- a/SMaven/pom.xml
+++ b/SMaven/pom.xml
@@ -36,6 +36,11 @@
     <scope>compile</scope>
 </dependency>
   
+   <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.4.0</version>
+</dependency>
    
   </dependencies>
 </project>
